# trading-bot

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  conftest.py  constraints.txt  pyproject.toml
.github/workflows/: ci.yml
config/: __init__.py  bot_configuration.py  configurations.yaml  constants.py  settings.py  strategy_params.yaml
docs/: PHASE1_SDK_DEVIATIONS.md
scripts/: balance_check.py  setup_creds.py  wrap_pusd.py
src/polybot/: __init__.py  cli.py  startup.py
src/polybot/backtest/: __init__.py  data_loader.py  replay.py
src/polybot/engine/: __init__.py  position.py  slot_loop.py  strategy_context.py
src/polybot/engine/strategies/: __init__.py  price_action_maker.py  simulation.py
src/polybot/obs/: __init__.py  chart_generator.py  logger.py  recorder.py  retry.py
src/polybot/persistence/: __init__.py
src/polybot/poly/: __init__.py  client.py  fee_calculator.py  live_view.py  market_discovery.py  order_dsl.py  orderbook.py  pusd.py
src/polybot/risk/: __init__.py  gate_validator.py  guard.py  sizer.py
src/polybot/signal/: __init__.py  continuation_filter.py  efficiency.py  engine.py  event_filter.py  htf_filter.py  hunt.py  invalidation.py  liquidity.py  math.py  models.py  pivots.py  snd_zones.py
src/polybot/sim/: __init__.py  fill_model.py  paper_client.py
src/polybot/truth/: __init__.py  binance_ws.py  candle_aggregator.py  chainlink_rtds.py  coinbase_ws.py  live_ticker.py  models.py  ticker_tracker.py
tests/integration/: test_live_orderbook.py
tests/property/: test_math_invariants.py
tests/unit/: test_bot_configuration.py  test_candle_aggregator.py  test_chart_generator.py  test_cli_smoke.py  test_constants.py  test_continuation_filter.py  test_efficiency.py  test_engine_cold_start.py  test_event_filter.py  test_fee_calculator.py  test_gate_validator.py  test_guard.py  test_invalidation.py  test_liquidity.py  test_logger_format_drift.py  test_logger_redaction.py  test_market_discovery.py  test_order_dsl.py  test_orderbook_tracker.py  test_pivots.py  test_position.py  test_recorder.py  test_retry.py  test_settings.py  test_signal_math.py  test_sizer.py  test_snd_zones.py  test_startup_banner.py  test_ticker_tracker.py  test_truth_payload_parsing.py  test_window_agnostic.py
